# supervisorcpp

./: .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  SECURITY_AUDIT.md  SPECIFICATION.md
cmake/: APKBUILD.in  GitVersion.cmake  version.h.in
docs/: ARCHITECTURE.md  SPECIFICATION.md  TODO.md
include/: config_types.h  logger.h  process.h  process_manager.h  rpc_server.h  security.h
src/: main.cpp
src/config/: config_parser.cpp
src/ctl/: supervisorctl.cpp
src/process/: process.cpp  process_manager.cpp
src/rpc/: rpc_server.cpp
src/util/: logger.cpp
supervisor-app/: args_parser.cpp  args_parser.h  daemon_state.h  main.cpp  rpc_handlers.h  supervisorctl.cpp  supervisord.cpp  supervisord.h  version.h
supervisor-app/src/: args_parser.cpp  args_parser.h  main.cpp  supervisorctl.cpp  supervisord.h
supervisor-app/src/ctl/: supervisorctl.cpp  supervisorctl.h
supervisor-app/src/daemon/: daemon_state.h  rpc_handlers.h  supervisord.cpp  supervisord.h
supervisor-app/tests/: ctl_handler_test.cpp
supervisor-lib/config/: config_parser.cpp  config_parser.h  config_types.h  ptree_ext.h  validation.cpp  validation.h
supervisor-lib/logger/: log_levels.cpp  log_levels.h  log_writer.cpp  log_writer.h  logger.cpp  logger.h
supervisor-lib/process/: log_writer.cpp  log_writer.h  process.cpp  process.h  process_manager.cpp  process_manager.h  setup.h
supervisor-lib/rpc/: rpc_connection.cpp  rpc_fwd.h  rpc_server.cpp  rpc_server.h  socket_util.h  xmlrpc.cpp  xmlrpc.h
supervisor-lib/src/config/: config_parser.cpp  config_parser.h  config_types.h  ini_reader.h  ptree_ext.h
supervisor-lib/src/logger/: log_levels.cpp  log_levels.h  log_writer.cpp  log_writer.h  logger.cpp  logger.h
supervisor-lib/src/process/: process.cpp  process.h  process_fwd.h  process_manager.cpp  process_manager.h
supervisor-lib/src/rpc/: rpc_connection.cpp  rpc_connection.h  rpc_fwd.h  rpc_server.cpp  rpc_server.h  xmlrpc.cpp  xmlrpc.h
supervisor-lib/src/util/: pidfile.h  platform.cpp  platform.h  secure.cpp  secure.h  string.cpp  string.h  test_util.h
supervisor-lib/tests/config/: config_parser_test.cpp  parser_robustness_test.cpp
supervisor-lib/tests/data/: simple_test.ini  test_config.ini
supervisor-lib/tests/integration/: integration_test.cpp
supervisor-lib/tests/logger/: log_writer_test.cpp
supervisor-lib/tests/rpc/: rpc_connection_test.cpp  rpc_dispatch_test.cpp  xmlrpc_test.cpp
supervisor-lib/tests/util/: secure_test.cpp  string_test.cpp
supervisor-lib/util/: errors.h  logger.h  path.h  secure.cpp  secure.h
tests/: test_util.h
tests/config/: config_parser_test.cpp  parser_robustness_test.cpp
tests/data/: autorestart_test.ini  log_test.ini  test_config.ini
tests/integration/: integration_test.cpp
tests/logger/: log_writer_test.cpp
tests/rpc/: rpc_connection_test.cpp  xmlrpc_parser_test.cpp  xmlrpc_test.cpp
tests/util/: secure_test.cpp
